# daemon

./: .env  .gitignore  Cargo.toml  Dockerfile  TODO.md  api.http  api_endpoints.http  api_endpoints_new.http  pipeline_endpoints.http  readme.md
migrations/2020-03-12-135557_create_commits/: down.sql  up.sql
src/: config.rs  db.rs  error.rs  handles.rs  main.rs  schema.rs  tests.rs  utils.rs
src/backend/: error.rs  local.rs  mod.rs  storable.rs
src/backend/local/: dataset.rs  mod.rs  pipeline.rs
src/commit/: mod.rs  models.rs  routes.rs
src/dataset/: error.rs  mod.rs  models.rs  routes.rs
src/dataset/messages/: get_dataset.rs  get_file.rs  mod.rs
src/dataset/routes/: branch.rs  commit.rs  dataset.rs  misc.rs  mod.rs
src/pipeline/: mod.rs  models.rs  routes.rs
src/pipeline/routes/: execution.rs  helpers.rs  mod.rs  provenance.rs  results.rs
src/types/: commit.rs  dataset.rs  mod.rs
src/version_control/: branch.rs  commit.rs  dataset.rs  error.rs  mod.rs  pipeline.rs
src/version_tree/: mod.rs  models.rs
