[package]
name = "iterum-fs"
version = "0.1.0"
authors = ["Mark <marktmmrmn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
listenfd = "0.3"
futures = "0.3.4"
serde = "1.0.1"
actix-multipart = "0.2.0"
async-std = "1.4.0"
serde_json = "1.0"
rand = "0.7.3"