[package]
name = "daemon"
version = "0.1.0"
authors = ["Mark <marktmmrmn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "daemon"
path = "src/main.rs"

[dependencies]
async-std = "1.4.0"
log = "0.4.0"
env_logger = "0.7.1"
dotenv = "0.15.0"

actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-multipart = "0.2.0"
listenfd = "0.3"
mime = "0.3.16"

serde = "1.0.1"
serde_json = "1.0"


futures = "0.3.4"
sled = "0.31.0"

iterum-rust = { git = "https://github.com/iterum-provenance/iterum-rust" }
